Mejorando un poco el disenio

--- a/Proyecto/Front/Index.html
+++ b/Proyecto/Front/Index.html
@@ -17,28 +17,6 @@
     />
   </head>
   <body>
-    <!--<div class="container-fluid bg-primary text-white py-2">
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-md-6">
-            <img
-              src="img/Logo-clinica.webp"
-              alt="Logo-clinica"
-              class="logoClinica"
-            />
-          </div>
-          <div class="col-md-3">
-            <p>Call Today:</p>
-            <span>555-123-2323, 555-123-2323</span>
-          </div>
-          <div class="col-md-3">
-            <p>Opening Hours:</p>
-            <span> Mon-Fri: 9am-6pm, Sun: 10am-1pm</span>
-          </div>
-        </div>
-      </div>
-    </div>-->
-
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
         <button
@@ -142,7 +120,7 @@
             />
           </div>
           <div class="col-lg-6 col-md-12">
-            <h2 class="TituloSeccionBienvenida">Clinica Pertenecer</h2>
+            <h2 class="TituloSeccionBienvenida">Clinica VivirBien</h2>
             <h3 class="SubtituloSeccionBienvenida">
               Dental clinic BeDentist welcomes you!
             </h3>
@@ -167,14 +145,14 @@
         <h2 class="tituloSeccionValores text-center">
           Valores De Nuestra Clinica
         </h2>
-        <div class="row justify-content-center my-5">
+        <div class="row justify-content-center filaSeccionValores">
           <div class="col-md-6 col-lg-3">
             <div class="feature text-center">
               <div class="icon-circle mb-3">
                 <i class="fa-regular fa-heart fa-3x"></i>
               </div>
-              <h3>Amor</h3>
-              <p>
+              <h3 class="subtituloSeccionValores">Amor</h3>
+              <p class="parrafoSeccionValores">
                 Booking an appointment at our dental clinic is as easy as doing
                 2 clicks!
               </p>
@@ -185,8 +163,8 @@
               <div class="icon-circle mb-3">
                 <i class="fa-regular fa-handshake fa-3x"></i>
               </div>
-              <h3>Respeto</h3>
-              <p>
+              <h3 class="subtituloSeccionValores">Respeto</h3>
+              <p class="parrafoSeccionValores">
                 Combined, our 5 dentists have over half a century of practical
                 experience. They are ready to put it to action for you!
               </p>
@@ -197,8 +175,8 @@
               <div class="icon-circle mb-3">
                 <i class="fa-regular fa-eye fa-3x"></i>
               </div>
-              <h3>Confidencialidad</h3>
-              <p>
+              <h3 class="subtituloSeccionValores">Confidencialidad</h3>
+              <p class="parrafoSeccionValores">
                 We work during all state holidays, besides working till late
                 during the regular days. In case of emergencies we accept
                 weekend bookings.
@@ -210,8 +188,8 @@
               <div class="icon-circle mb-3">
                 <i class="fa-regular fa-comments fa-3x"></i>
               </div>
-              <h3>Comunicación</h3>
-              <p>
+              <h3 class="subtituloSeccionValores">Comunicación</h3>
+              <p class="parrafoSeccionValores">
                 Our reasonable prices made thousands of people smile with a new,
                 beautiful smile, as never before!
               </p>
@@ -230,7 +208,7 @@
               <div class="icon-circle mb-3">
                 <img class="imgServicio" src="img/imgServicio1.jpg" alt="" />
               </div>
-              <h3>Medicina General</h3>
+              <h3 class="subtituloSeccionServicios">Medicina General</h3>
             </div>
           </div>
           <div class="col-md-6 col-lg-3 mb-4">
@@ -238,7 +216,7 @@
               <div class="icon-circle mb-3">
                 <img class="imgServicio" src="img/imgServicio2.jpg" alt="" />
               </div>
-              <h3>Pediatria</h3>
+              <h3 class="subtituloSeccionServicios">Pediatria</h3>
             </div>
           </div>
           <div class="col-md-6 col-lg-3 mb-4">
@@ -246,7 +224,7 @@
               <div class="icon-circle mb-3">
                 <img class="imgServicio" src="img/imgServicio3.webp" alt="" />
               </div>
-              <h3>Ortopedia</h3>
+              <h3 class="subtituloSeccionServicios">Ortopedia</h3>
             </div>
           </div>
           <div class="col-md-6 col-lg-3 mb-4">
@@ -254,12 +232,14 @@
               <div class="icon-circle mb-3">
                 <img class="imgServicio" src="img/imgServicio4.jpg" alt="" />
               </div>
-              <h3>Nutricion</h3>
+              <h3 class="subtituloSeccionServicios">Nutricion</h3>
             </div>
           </div>
         </div>
         <div class="ContenedorBtn text-center">
-          <button class="btnSeccionServicios">Todos los servicios</button>
+          <a href="PaginaServicios.html" class="btnSeccionServicios"
+            >Todos los servicios</a
+          >
         </div>
       </div>
     </section>
@@ -267,7 +247,7 @@
     <section id="SeccionTestimonios" class="SeccionTestimonios text-white">
       <div class="container">
         <h2 class="tituloTestimonios text-center mb-5">
-          Lo que dicen nuestros pacientes
+          Lo que Dicen Nuestros Pacientes
         </h2>
         <div class="row justify-content-center">
           <div class="col-md-6 col-lg-4 mb-4">
