--- a/Proyecto/Front/PaginaServicios.html
+++ b/Proyecto/Front/PaginaServicios.html
@@ -17,6 +17,126 @@
     />
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item mx-4"><a class="nav-link" href="#">Home</a></li>
+            <li class="nav-item mx-4">
+              <a class="nav-link" href="#">About us</a>
+            </li>
+            <li class="nav-item mx-4">
+              <a class="nav-link" href="#">Services</a>
+            </li>
+            <li class="nav-item mx-4"><a class="nav-link" href="#">News</a></li>
+            <li class="nav-item mx-4">
+              <a class="nav-link" href="#">Contacts</a>
+            </li>
+            <li class="nav-item mx-4s">
+              <a class="nav-link" href="#">Pages</a>
+            </li>
+            <li class="nav-item mx-4s">
+              <a class="nav-link" href="#">Inicio sesion/Registro</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <section class="PaginaServiciosTotales py-5">
+      <div class="container">
+        <h2 class="text-center text-primary mb-5">
+          Our dental clinic's team provides many kinds of dentistry services
+          such as:
+        </h2>
+
+        <div
+          class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4"
+          id="services"
+        >
+          <div class="col">
+            <div class="card service-card h-100">
+              <img
+                src="path/to/general-care.jpg"
+                class="card-img-top"
+                alt="General and preventive care"
+              />
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">General and preventive care</h5>
+                <p class="card-text">
+                  A wide range for a preventive and general dentistry care. We
+                  put focus on examining root canals and the overview state of
+                  teeth's health.
+                </p>
+                <a href="#" class="btn btn-primary mt-auto">Read more</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card service-card h-100">
+              <img
+                src="path/to/cosmetic.jpg"
+                class="card-img-top"
+                alt="Cosmetic solutions"
+              />
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">Cosmetic solutions</h5>
+                <p class="card-text">
+                  Our range of cosmetic dentistry solutions includes such vitals
+                  as teeth whitening as well as a laser dentistry.
+                </p>
+                <a href="#" class="btn btn-primary mt-auto">Read more</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card service-card h-100">
+              <img
+                src="path/to/restorative.jpg"
+                class="card-img-top"
+                alt="Restorative solutions"
+              />
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">Restorative solutions</h5>
+                <p class="card-text">
+                  Restoring teeth in bad condition is what we specialize in. It
+                  may include laser restoration and Invisalign service.
+                </p>
+                <a href="#" class="btn btn-primary mt-auto">Read more</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card service-card h-100">
+              <img
+                src="path/to/additional.jpg"
+                class="card-img-top"
+                alt="Additional treatments"
+              />
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">Additional treatments</h5>
+                <p class="card-text">
+                  People's dentistry issues may vary. That's why we have a lot
+                  of non-conventional treatments, including X-ray scanning.
+                </p>
+                <a href="#" class="btn btn-primary mt-auto">Read more</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <script>
       src = "Scripts.js";
     </script>
