--- a/Proyecto/Front/PaginaServicios.html
+++ b/Proyecto/Front/PaginaServicios.html
@@ -29,7 +29,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item mx-4"><a class="nav-link" href="#">Home</a></li>
+            <li class="nav-item mx-4">
+              <a class="nav-link" href="Index.html">Home</a>
+            </li>
             <li class="nav-item mx-4">
               <a class="nav-link" href="#">About us</a>
             </li>
@@ -53,25 +55,22 @@
 
     <section class="PaginaServiciosTotales py-5">
       <div class="container">
-        <h2 class="text-center text-primary mb-5">
+        <h2 class="text-center TitituloPaginaServicios">
           Our dental clinic's team provides many kinds of dentistry services
           such as:
         </h2>
 
-        <div
-          class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4"
-          id="services"
-        >
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4" id="services">
           <div class="col">
             <div class="card service-card h-100">
               <img
-                src="path/to/general-care.jpg"
+                src="img/imgServicio1.jpg"
                 class="card-img-top"
                 alt="General and preventive care"
               />
               <div class="card-body d-flex flex-column">
-                <h5 class="card-title">General and preventive care</h5>
-                <p class="card-text">
+                <h5 class="TituloCardServicios">General and preventive care</h5>
+                <p class="ParrafoCardServicios">
                   A wide range for a preventive and general dentistry care. We
                   put focus on examining root canals and the overview state of
                   teeth's health.
@@ -84,13 +83,13 @@
           <div class="col">
             <div class="card service-card h-100">
               <img
-                src="path/to/cosmetic.jpg"
+                src="img/imgServicio2.jpg"
                 class="card-img-top"
                 alt="Cosmetic solutions"
               />
               <div class="card-body d-flex flex-column">
-                <h5 class="card-title">Cosmetic solutions</h5>
-                <p class="card-text">
+                <h5 class="TituloCardServicios">Cosmetic solutions</h5>
+                <p class="ParrafoCardServicios">
                   Our range of cosmetic dentistry solutions includes such vitals
                   as teeth whitening as well as a laser dentistry.
                 </p>
@@ -102,13 +101,13 @@
           <div class="col">
             <div class="card service-card h-100">
               <img
-                src="path/to/restorative.jpg"
+                src="img/imgServicio3.webp"
                 class="card-img-top"
                 alt="Restorative solutions"
               />
               <div class="card-body d-flex flex-column">
-                <h5 class="card-title">Restorative solutions</h5>
-                <p class="card-text">
+                <h5 class="TituloCardServicios">Restorative solutions</h5>
+                <p class="ParrafoCardServicios">
                   Restoring teeth in bad condition is what we specialize in. It
                   may include laser restoration and Invisalign service.
                 </p>
@@ -120,13 +119,13 @@
           <div class="col">
             <div class="card service-card h-100">
               <img
-                src="path/to/additional.jpg"
+                src="img/imgServicio4.jpg"
                 class="card-img-top"
                 alt="Additional treatments"
               />
               <div class="card-body d-flex flex-column">
-                <h5 class="card-title">Additional treatments</h5>
-                <p class="card-text">
+                <h5 class="TituloCardServicios">Additional treatments</h5>
+                <p class="ParrafoCardServicios">
                   People's dentistry issues may vary. That's why we have a lot
                   of non-conventional treatments, including X-ray scanning.
                 </p>
