cambios, agrego de nuevas carpetas en la carperta img

--- a/Proyecto/Front/Index.html
+++ b/Proyecto/Front/Index.html
@@ -34,7 +34,7 @@
               <a class="nav-link" href="#">About us</a>
             </li>
             <li class="nav-item mx-4">
-              <a class="nav-link" href="#">Services</a>
+              <a class="nav-link" href="PaginaServicios.html">Services</a>
             </li>
             <li class="nav-item mx-4"><a class="nav-link" href="#">News</a></li>
             <li class="nav-item mx-4">
@@ -206,7 +206,11 @@
           <div class="col-md-6 col-lg-3 mb-4">
             <div class="feature text-center">
               <div class="icon-circle mb-3">
-                <img class="imgServicio" src="img/imgServicio1.jpg" alt="" />
+                <img
+                  class="imgServicio"
+                  src="img/imgServicios/imgServicio1.jpg"
+                  alt=""
+                />
               </div>
               <h3 class="subtituloSeccionServicios">Medicina General</h3>
             </div>
@@ -214,7 +218,11 @@
           <div class="col-md-6 col-lg-3 mb-4">
             <div class="feature text-center">
               <div class="icon-circle mb-3">
-                <img class="imgServicio" src="img/imgServicio2.jpg" alt="" />
+                <img
+                  class="imgServicio"
+                  src="img/imgServicios/imgServicio2.jpg"
+                  alt=""
+                />
               </div>
               <h3 class="subtituloSeccionServicios">Pediatria</h3>
             </div>
@@ -222,7 +230,11 @@
           <div class="col-md-6 col-lg-3 mb-4">
             <div class="feature text-center">
               <div class="icon-circle mb-3">
-                <img class="imgServicio" src="img/imgServicio3.webp" alt="" />
+                <img
+                  class="imgServicio"
+                  src="img/imgServicios/imgServicio3.webp"
+                  alt=""
+                />
               </div>
               <h3 class="subtituloSeccionServicios">Ortopedia</h3>
             </div>
@@ -230,7 +242,11 @@
           <div class="col-md-6 col-lg-3 mb-4">
             <div class="feature text-center">
               <div class="icon-circle mb-3">
-                <img class="imgServicio" src="img/imgServicio4.jpg" alt="" />
+                <img
+                  class="imgServicio"
+                  src="img/imgServicios/imgServicio4.jpg"
+                  alt=""
+                />
               </div>
               <h3 class="subtituloSeccionServicios">Nutricion</h3>
             </div>
