--- a/Proyecto/Front/PaginaServicios.html
+++ b/Proyecto/Front/PaginaServicios.html
@@ -53,29 +53,27 @@
       </div>
     </nav>
 
-    <section class="PaginaServiciosTotales py-5">
+    <section class="PaginaServiciosTotales">
       <div class="container">
         <h2 class="text-center TitituloPaginaServicios">
-          Our dental clinic's team provides many kinds of dentistry services
-          such as:
+          Explore Nuestros Servicios Especializados en Atención Médica Integral
         </h2>
 
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4" id="services">
           <div class="col">
             <div class="card service-card h-100">
               <img
-                src="img/imgServicio1.jpg"
+                src="img/imgServicios/imgServicio2.jpg"
                 class="card-img-top"
                 alt="General and preventive care"
               />
               <div class="card-body d-flex flex-column">
-                <h5 class="TituloCardServicios">General and preventive care</h5>
+                <h5 class="TituloCardServicios">Pediatría</h5>
                 <p class="ParrafoCardServicios">
-                  A wide range for a preventive and general dentistry care. We
-                  put focus on examining root canals and the overview state of
-                  teeth's health.
+                  Cuidamos la salud de los más pequeños con atención integral y
+                  preventiva para asegurar su desarrollo óptimo.
                 </p>
-                <a href="#" class="btn btn-primary mt-auto">Read more</a>
+                <a href="#" class="btn btn-primary mt-auto">Leer Más</a>
               </div>
             </div>
           </div>
@@ -88,12 +86,12 @@
                 alt="Cosmetic solutions"
               />
               <div class="card-body d-flex flex-column">
-                <h5 class="TituloCardServicios">Cosmetic solutions</h5>
+                <h5 class="TituloCardServicios">Psiquiatría</h5>
                 <p class="ParrafoCardServicios">
-                  Our range of cosmetic dentistry solutions includes such vitals
-                  as teeth whitening as well as a laser dentistry.
+                  Ofrecemos tratamientos especializados para la salud mental,
+                  adaptados a las necesidades individuales de cada paciente.
                 </p>
-                <a href="#" class="btn btn-primary mt-auto">Read more</a>
+                <a href="#" class="btn btn-primary mt-auto">Leer Más</a>
               </div>
             </div>
           </div>
@@ -106,12 +104,13 @@
                 alt="Restorative solutions"
               />
               <div class="card-body d-flex flex-column">
-                <h5 class="TituloCardServicios">Restorative solutions</h5>
+                <h5 class="TituloCardServicios">Ortopedia</h5>
                 <p class="ParrafoCardServicios">
-                  Restoring teeth in bad condition is what we specialize in. It
-                  may include laser restoration and Invisalign service.
+                  Brindamos soluciones para problemas del sistema
+                  musculoesquelético, incluyendo tratamientos innovadores y
+                  rehabilitación.
                 </p>
-                <a href="#" class="btn btn-primary mt-auto">Read more</a>
+                <a href="#" class="btn btn-primary mt-auto">Leer Más</a>
               </div>
             </div>
           </div>
@@ -124,18 +123,334 @@
                 alt="Additional treatments"
               />
               <div class="card-body d-flex flex-column">
-                <h5 class="TituloCardServicios">Additional treatments</h5>
+                <h5 class="TituloCardServicios">Urologia</h5>
                 <p class="ParrafoCardServicios">
-                  People's dentistry issues may vary. That's why we have a lot
-                  of non-conventional treatments, including X-ray scanning.
+                  Realizamos diagnósticos y tratamientos de las enfermedades del
+                  aparato urinario y del sistema reproductor masculino.
                 </p>
-                <a href="#" class="btn btn-primary mt-auto">Read more</a>
+                <a href="#" class="btn btn-primary mt-auto">Leer Más</a>
               </div>
             </div>
           </div>
         </div>
+        <hr />
       </div>
     </section>
+
+    <section class="PaginaServiciosTotales py-1">
+      <div class="container">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4" id="services">
+          <div class="col">
+            <div class="card service-card h-100">
+              <img
+                src="img/imgServicio1.jpg"
+                class="card-img-top"
+                alt="General and preventive care"
+              />
+              <div class="card-body d-flex flex-column">
+                <h5 class="TituloCardServicios">Ginecología</h5>
+                <p class="ParrafoCardServicios">
+                  Proveemos atención completa para la salud femenina, desde
+                  chequeos rutinarios hasta tratamientos especializados.
+                </p>
+                <a href="#" class="btn btn-primary mt-auto">Leer Más</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card service-card h-100">
+              <img
+                src="img/imgServicio2.jpg"
+                class="card-img-top"
+                alt="Cosmetic solutions"
+              />
+              <div class="card-body d-flex flex-column">
+                <h5 class="TituloCardServicios">Reumatología</h5>
+                <p class="ParrafoCardServicios">
+                  Tratamos enfermedades reumáticas con enfoques personalizados y
+                  tecnología avanzada para mejorar la calidad de vida.
+                </p>
+                <a href="#" class="btn btn-primary mt-auto">Leer Más</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card service-card h-100">
+              <img
+                src="img/imgServicio3.webp"
+                class="card-img-top"
+                alt="Restorative solutions"
+              />
+              <div class="card-body d-flex flex-column">
+                <h5 class="TituloCardServicios">Medicina General</h5>
+                <p class="ParrafoCardServicios">
+                  Ofrecemos servicios médicos generales para el diagnóstico,
+                  tratamiento y prevención de diversas enfermedades.
+                </p>
+                <a href="#" class="btn btn-primary mt-auto">Leer Más</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card service-card h-100">
+              <img
+                src="img/imgServicio4.jpg"
+                class="card-img-top"
+                alt="Additional treatments"
+              />
+              <div class="card-body d-flex flex-column">
+                <h5 class="TituloCardServicios">Geriatría</h5>
+                <p class="ParrafoCardServicios">
+                  Nos enfocamos en la salud integral de los adultos mayores,
+                  promoviendo su bienestar y calidad de vida.s
+                </p>
+                <a href="#" class="btn btn-primary mt-auto">Leer Más</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <hr />
+      </div>
+    </section>
+
+    <section class="PaginaServiciosTotales py-1">
+      <div class="container">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4" id="services">
+          <div class="col">
+            <div class="card service-card h-100">
+              <img
+                src="img/imgServicio1.jpg"
+                class="card-img-top"
+                alt="General and preventive care"
+              />
+              <div class="card-body d-flex flex-column">
+                <h5 class="TituloCardServicios">Endocrinología</h5>
+                <p class="ParrafoCardServicios">
+                  Diagnósticos y tratamientos especializados para trastornos
+                  hormonales y metabólicos, adaptados a cada paciente.
+                </p>
+                <a href="#" class="btn btn-primary mt-auto">Leer Más</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card service-card h-100">
+              <img
+                src="img/imgServicio2.jpg"
+                class="card-img-top"
+                alt="Cosmetic solutions"
+              />
+              <div class="card-body d-flex flex-column">
+                <h5 class="TituloCardServicios">Cirugía General</h5>
+                <p class="ParrafoCardServicios">
+                  Realizamos procedimientos quirúrgicos con alta precisión y
+                  cuidados postoperatorios personalizados.
+                </p>
+                <a href="#" class="btn btn-primary mt-auto">Leer Más</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card service-card h-100">
+              <img
+                src="img/imgServicio3.webp"
+                class="card-img-top"
+                alt="Restorative solutions"
+              />
+              <div class="card-body d-flex flex-column">
+                <h5 class="TituloCardServicios">Fisiatría</h5>
+                <p class="ParrafoCardServicios">
+                  Rehabilitamos y tratamos disfunciones físicas mediante
+                  terapias y ejercicios específicos para cada condición.
+                </p>
+                <a href="#" class="btn btn-primary mt-auto">Leer Más</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card service-card h-100">
+              <img
+                src="img/imgServicio4.jpg"
+                class="card-img-top"
+                alt="Additional treatments"
+              />
+              <div class="card-body d-flex flex-column">
+                <h5 class="TituloCardServicios">Medicina Interna</h5>
+                <p class="ParrafoCardServicios">
+                  Proveemos atención médica especializada para enfermedades
+                  complejas y crónicas en adultos.
+                </p>
+                <a href="#" class="btn btn-primary mt-auto">Leer Más</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <hr />
+      </div>
+    </section>
+    <section class="PaginaServiciosTotales py-1">
+      <div class="container">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4" id="services">
+          <div class="col">
+            <div class="card service-card h-100">
+              <img
+                src="img/imgServicio1.jpg"
+                class="card-img-top"
+                alt="General and preventive care"
+              />
+              <div class="card-body d-flex flex-column">
+                <h5 class="TituloCardServicios">Neurocirugía</h5>
+                <p class="ParrafoCardServicios">
+                  Realizamos intervenciones quirúrgicas precisas para tratar
+                  trastornos del sistema nervioso central y periférico.
+                </p>
+                <a href="#" class="btn btn-primary mt-auto">Leer Más</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card service-card h-100">
+              <img
+                src="img/imgServicio2.jpg"
+                class="card-img-top"
+                alt="Cosmetic solutions"
+              />
+              <div class="card-body d-flex flex-column">
+                <h5 class="TituloCardServicios">Psicología Adultos</h5>
+                <p class="ParrafoCardServicios">
+                  Brindamos apoyo psicológico y terapias personalizadas para
+                  mejorar la salud mental de los adultos.
+                </p>
+                <a href="#" class="btn btn-primary mt-auto">Leer Más</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card service-card h-100">
+              <img
+                src="img/imgServicio3.webp"
+                class="card-img-top"
+                alt="Restorative solutions"
+              />
+              <div class="card-body d-flex flex-column">
+                <h5 class="TituloCardServicios">Psicología Infantil</h5>
+                <p class="ParrafoCardServicios">
+                  Apoyamos el desarrollo emocional y psicológico de los niños
+                  mediante terapias adaptadas a sus necesidades.
+                </p>
+                <a href="#" class="btn btn-primary mt-auto">Leer Más</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card service-card h-100">
+              <img
+                src="img/imgServicio4.jpg"
+                class="card-img-top"
+                alt="Additional treatments"
+              />
+              <div class="card-body d-flex flex-column">
+                <h5 class="TituloCardServicios">Terapia de Parejas</h5>
+                <p class="ParrafoCardServicios">
+                  Ofrecemos asesoramiento y terapias para mejorar la
+                  comunicación y resolver conflictos en la relación de pareja.
+                </p>
+                <a href="#" class="btn btn-primary mt-auto">Leer Más</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <hr />
+      </div>
+    </section>
+    <section class="PaginaServiciosTotales py-1">
+      <div class="container">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4" id="services">
+          <div class="col">
+            <div class="card service-card h-100">
+              <img
+                src="img/imgServicio1.jpg"
+                class="card-img-top"
+                alt="General and preventive care"
+              />
+              <div class="card-body d-flex flex-column">
+                <h5 class="TituloCardServicios">Telepsicología</h5>
+                <p class="ParrafoCardServicios">
+                  Proveemos servicios de psicología a distancia para que puedas
+                  acceder a apoyo profesional desde cualquier lugar.
+                </p>
+                <a href="#" class="btn btn-primary mt-auto">Leer Más</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card service-card h-100">
+              <img
+                src="img/imgServicio2.jpg"
+                class="card-img-top"
+                alt="Cosmetic solutions"
+              />
+              <div class="card-body d-flex flex-column">
+                <h5 class="TituloCardServicios">Gastroenterología</h5>
+                <p class="ParrafoCardServicios">
+                  Diagnóstico y tratamiento de enfermedades del sistema
+                  digestivo con enfoques modernos y efectivos.
+                </p>
+                <a href="#" class="btn btn-primary mt-auto">Leer Más</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card service-card h-100">
+              <img
+                src="img/imgServicio3.webp"
+                class="card-img-top"
+                alt="Restorative solutions"
+              />
+              <div class="card-body d-flex flex-column">
+                <h5 class="TituloCardServicios">Identidad Mental</h5>
+                <p class="ParrafoCardServicios">
+                  Apoyamos la exploración y afirmación de la identidad personal
+                  mediante terapias psicológicas especializadas.
+                </p>
+                <a href="#" class="btn btn-primary mt-auto">Leer Más</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card service-card h-100">
+              <img
+                src="img/imgServicio4.jpg"
+                class="card-img-top"
+                alt="Additional treatments"
+              />
+              <div class="card-body d-flex flex-column">
+                <h5 class="TituloCardServicios">Confianza Positiva</h5>
+                <p class="ParrafoCardServicios">
+                  Fomentamos el bienestar emocional y la autoestima a través de
+                  programas terapéuticos personalizados.
+                </p>
+                <a href="#" class="btn btn-primary mt-auto">Leer Más</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <hr />
+      </div>
+    </section>
+
     <script>
       src = "Scripts.js";
     </script>
