--- a/Proyecto/Front/PaginaServicios.html
+++ b/Proyecto/Front/PaginaServicios.html
@@ -81,7 +81,7 @@
           <div class="col">
             <div class="card service-card h-100">
               <img
-                src="img/imgServicio2.jpg"
+                src="img/imgServicios/imgServicioPsiquiatria.jpg"
                 class="card-img-top"
                 alt="Cosmetic solutions"
               />
@@ -99,7 +99,7 @@
           <div class="col">
             <div class="card service-card h-100">
               <img
-                src="img/imgServicio3.webp"
+                src="img/imgServicios/imgServicio3.webp"
                 class="card-img-top"
                 alt="Restorative solutions"
               />
@@ -118,7 +118,7 @@
           <div class="col">
             <div class="card service-card h-100">
               <img
-                src="img/imgServicio4.jpg"
+                src="img/imgServicios/imgServicioUrologia.jpg"
                 class="card-img-top"
                 alt="Additional treatments"
               />
@@ -143,7 +143,7 @@
           <div class="col">
             <div class="card service-card h-100">
               <img
-                src="img/imgServicio1.jpg"
+                src="img/imgServicios/imgServicioGinecología.jpg"
                 class="card-img-top"
                 alt="General and preventive care"
               />
@@ -161,7 +161,7 @@
           <div class="col">
             <div class="card service-card h-100">
               <img
-                src="img/imgServicio2.jpg"
+                src="img/imgServicios/imgServicioReumatología.jpg"
                 class="card-img-top"
                 alt="Cosmetic solutions"
               />
@@ -179,7 +179,7 @@
           <div class="col">
             <div class="card service-card h-100">
               <img
-                src="img/imgServicio3.webp"
+                src="img/imgServicios/imgServicio1.jpg"
                 class="card-img-top"
                 alt="Restorative solutions"
               />
@@ -197,7 +197,7 @@
           <div class="col">
             <div class="card service-card h-100">
               <img
-                src="img/imgServicio4.jpg"
+                src="img/imgServicios/imgServicioGeriatria.jpg"
                 class="card-img-top"
                 alt="Additional treatments"
               />
@@ -222,7 +222,7 @@
           <div class="col">
             <div class="card service-card h-100">
               <img
-                src="img/imgServicio1.jpg"
+                src="img/imgServicios/imgServicioEndocrinología.jpg"
                 class="card-img-top"
                 alt="General and preventive care"
               />
@@ -240,7 +240,7 @@
           <div class="col">
             <div class="card service-card h-100">
               <img
-                src="img/imgServicio2.jpg"
+                src="img/imgServicios/imgServicioCirugíaGeneral.jpg"
                 class="card-img-top"
                 alt="Cosmetic solutions"
               />
@@ -258,7 +258,7 @@
           <div class="col">
             <div class="card service-card h-100">
               <img
-                src="img/imgServicio3.webp"
+                src="img/imgServicios/imgServicioFisiatría.jpg"
                 class="card-img-top"
                 alt="Restorative solutions"
               />
@@ -276,7 +276,7 @@
           <div class="col">
             <div class="card service-card h-100">
               <img
-                src="img/imgServicio4.jpg"
+                src="img/imgServicios/imgServicioMedicinaInterna.jpg"
                 class="card-img-top"
                 alt="Additional treatments"
               />
@@ -300,7 +300,7 @@
           <div class="col">
             <div class="card service-card h-100">
               <img
-                src="img/imgServicio1.jpg"
+                src="img/imgServicios/imgServicioNeurocirugía.jpg"
                 class="card-img-top"
                 alt="General and preventive care"
               />
@@ -318,7 +318,7 @@
           <div class="col">
             <div class="card service-card h-100">
               <img
-                src="img/imgServicio2.jpg"
+                src="img/imgServicios/imgServicioPsicologíaAdultos.jpg"
                 class="card-img-top"
                 alt="Cosmetic solutions"
               />
@@ -336,7 +336,7 @@
           <div class="col">
             <div class="card service-card h-100">
               <img
-                src="img/imgServicio3.webp"
+                src="img/imgServicios/imgServicioPsicologíaInfantil.jpg"
                 class="card-img-top"
                 alt="Restorative solutions"
               />
@@ -354,7 +354,7 @@
           <div class="col">
             <div class="card service-card h-100">
               <img
-                src="img/imgServicio4.jpg"
+                src="img/imgServicios/imgServicioTerapiadeParejas.jpg"
                 class="card-img-top"
                 alt="Additional treatments"
               />
@@ -378,7 +378,7 @@
           <div class="col">
             <div class="card service-card h-100">
               <img
-                src="img/imgServicio1.jpg"
+                src="img/imgServicios/imgServicioTelepsicología.jpg"
                 class="card-img-top"
                 alt="General and preventive care"
               />
@@ -396,7 +396,7 @@
           <div class="col">
             <div class="card service-card h-100">
               <img
-                src="img/imgServicio2.jpg"
+                src="img/imgServicios/imgServicioGastroenterología.jpg"
                 class="card-img-top"
                 alt="Cosmetic solutions"
               />
@@ -414,7 +414,7 @@
           <div class="col">
             <div class="card service-card h-100">
               <img
-                src="img/imgServicio3.webp"
+                src="img/imgServicios/imgServicioIdentidadMental.jpg"
                 class="card-img-top"
                 alt="Restorative solutions"
               />
@@ -432,7 +432,7 @@
           <div class="col">
             <div class="card service-card h-100">
               <img
-                src="img/imgServicio4.jpg"
+                src="img/imgServicios/imgServicioConfianzaPositiva.jpg"
                 class="card-img-top"
                 alt="Additional treatments"
               />
