--- a/Proyecto/Front/PaginaServicios.html
+++ b/Proyecto/Front/PaginaServicios.html
@@ -30,23 +30,27 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item mx-4">
-              <a class="nav-link" href="Index.html">Home</a>
+              <a class="nav-link" href="Index.html">Inicio</a>
             </li>
             <li class="nav-item mx-4">
-              <a class="nav-link" href="#">About us</a>
+              <a class="nav-link" href="#">Acerca de Nosotros</a>
             </li>
             <li class="nav-item mx-4">
-              <a class="nav-link" href="#">Services</a>
+              <a class="nav-link" href="PaginaServicios.html">Servicios</a>
             </li>
-            <li class="nav-item mx-4"><a class="nav-link" href="#">News</a></li>
+            <li class="nav-item mx-4">
+              <a class="nav-link" href="#">Contacto</a>
+            </li>
             <li class="nav-item mx-4">
               <a class="nav-link" href="#">Contacts</a>
             </li>
             <li class="nav-item mx-4s">
               <a class="nav-link" href="#">Pages</a>
             </li>
-            <li class="nav-item mx-4s">
-              <a class="nav-link" href="#">Inicio sesion/Registro</a>
+          </ul>
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item mx-4">
+              <a class="nav-link" href="#">Inicio sesión/Registro</a>
             </li>
           </ul>
         </div>
@@ -73,7 +77,11 @@
                   Cuidamos la salud de los más pequeños con atención integral y
                   preventiva para asegurar su desarrollo óptimo.
                 </p>
-                <a href="#" class="btn btn-primary mt-auto">Leer Más</a>
+                <a
+                  href="Servicios/Pediatria.html"
+                  class="btn btn-primary mt-auto"
+                  >Leer Más</a
+                >
               </div>
             </div>
           </div>
