--- a/Proyecto/Front/Index.html
+++ b/Proyecto/Front/Index.html
@@ -29,22 +29,28 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item mx-4"><a class="nav-link" href="#">Home</a></li>
             <li class="nav-item mx-4">
-              <a class="nav-link" href="#">About us</a>
+              <a class="nav-link" href="#">Inicio</a>
             </li>
             <li class="nav-item mx-4">
-              <a class="nav-link" href="PaginaServicios.html">Services</a>
+              <a class="nav-link" href="#">Acerca de Nosotros</a>
             </li>
-            <li class="nav-item mx-4"><a class="nav-link" href="#">News</a></li>
+            <li class="nav-item mx-4">
+              <a class="nav-link" href="PaginaServicios.html">Servicios</a>
+            </li>
+            <li class="nav-item mx-4">
+              <a class="nav-link" href="#">Contacto</a>
+            </li>
             <li class="nav-item mx-4">
               <a class="nav-link" href="#">Contacts</a>
             </li>
             <li class="nav-item mx-4s">
               <a class="nav-link" href="#">Pages</a>
             </li>
-            <li class="nav-item mx-4s">
-              <a class="nav-link" href="#">Inicio sesion/Registro</a>
+          </ul>
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item mx-4">
+              <a class="nav-link" href="#">Inicio sesión/Registro</a>
             </li>
           </ul>
         </div>
