--- a/Proyecto/Front/PaginaServicios.html
+++ b/Proyecto/Front/PaginaServicios.html
@@ -30,7 +30,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item mx-4">
-              <a class="nav-link" href="Index.html">Inicio</a>
+              <a class="nav-link" href="Index.php">Inicio</a>
             </li>
             <li class="nav-item mx-4">
               <a class="nav-link" href="#">Acerca de Nosotros</a>
