--- a/Proyecto/Front/PaginaServicios.html
+++ b/Proyecto/Front/PaginaServicios.html
@@ -77,9 +77,7 @@
                   Cuidamos la salud de los más pequeños con atención integral y
                   preventiva para asegurar su desarrollo óptimo.
                 </p>
-                <a
-                  href="Servicios/Pediatria.html"
-                  class="btn btn-primary mt-auto"
+                <a href="Pediatria.html" class="btn btn-primary mt-auto"
                   >Leer Más</a
                 >
               </div>
