--- a/Proyecto/Front/Pediatria.html
+++ b/Proyecto/Front/Pediatria.html
@@ -10,7 +10,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/Proyecto/Front/Style.css" />
+    <link rel="stylesheet" href="Style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -29,16 +29,14 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item mx-4">
-              <a class="nav-link" href="/Proyecto/Front/Index.html">Inicio</a>
+            <li class="nav-item">
+              <a class="nav-link" href="Index.php">Inicio</a>
             </li>
             <li class="nav-item mx-4">
               <a class="nav-link" href="#">Acerca de Nosotros</a>
             </li>
             <li class="nav-item mx-4">
-              <a class="nav-link" href="/Proyecto/Front/PaginaServicios.html"
-                >Servicios</a
-              >
+              <a class="nav-link" href="PaginaServicios.html">Servicios</a>
             </li>
             <li class="nav-item mx-4">
               <a class="nav-link" href="#">Contacto</a>
@@ -46,12 +44,12 @@
             <li class="nav-item mx-4">
               <a class="nav-link" href="#">Contacts</a>
             </li>
-            <li class="nav-item mx-4s">
+            <li class="nav-item mx-4">
               <a class="nav-link" href="#">Pages</a>
             </li>
           </ul>
           <ul class="navbar-nav ms-auto">
-            <li class="nav-item mx-4">
+            <li class="nav-item">
               <a class="nav-link" href="#">Inicio sesión/Registro</a>
             </li>
           </ul>
