--- a/Proyecto/Front/Pediatria.html
+++ b/Proyecto/Front/Pediatria.html
@@ -10,7 +10,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="Style.css" />
+    <link rel="stylesheet" href="Servicios.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -57,6 +57,87 @@
       </div>
     </nav>
 
+    <section class="ImgBannerServicios">
+      <img
+        src="img/imgServicios/ImgBanner.webp"
+        alt="ImgBannerServicios"
+        class="img-Banner"
+      />
+    </section>
+
+    <section class="pediatria-heredia">
+      <div class="container">
+        <h1 class="text-center">Somos los líderes en Pediatría en Heredia.</h1>
+
+        <div class="mission text-center">
+          <p class="uppercase">
+            Procuramos el bienestar de las y los pequeñines, atendemos con
+            pasión, paciencia y entrega para brindarle a la familia un servicio
+            excepcional.
+          </p>
+        </div>
+
+        <div class="que-es-pediatria">
+          <h2 class="text-center TituloPediatria">¿Qué es la Pediatría?</h2>
+          <p class="text-center">
+            A la Pediatría le incumbe todo cuanto se refiere a los cuidados del
+            niño y adolescente sano (Pediatría Preventiva), a los modos de
+            asistencia médica integral, total y continuada en el niño y el
+            adolescente en estado de enfermedad (Pediatría Clínica), y a cuanto
+            atañe al niño y adolescente sano y enfermo en sus interrelaciones
+            individuales y con la comunidad en el medio físico y humano en que
+            de manera ininterrumpida y con características propias se desarrolla
+            (Pediatría Social).
+          </p>
+        </div>
+
+        <div class="seguros text-center">
+          <p class="uppercase">Aceptamos todos los seguros médicos del país</p>
+        </div>
+
+        <h2 class="text-center">Pediatría en Heredia</h2>
+
+        <div class="servicios-imagenes">
+          <div class="row">
+            <div class="col">
+              <img
+                src="path/to/icon-image-1.jpg"
+                alt="Iconos médicos"
+                class="img-fluid"
+              />
+            </div>
+            <div class="col">
+              <img
+                src="path/to/doctor-baby-image.jpg"
+                alt="Doctor examinando bebé"
+                class="img-fluid"
+              />
+            </div>
+            <div class="col">
+              <img
+                src="path/to/doctor-child-icon.jpg"
+                alt="Icono de doctor y niño"
+                class="img-fluid"
+              />
+            </div>
+            <div class="col">
+              <img
+                src="path/to/medical-items-pattern.jpg"
+                alt="Patrón de artículos médicos"
+                class="img-fluid"
+              />
+            </div>
+            <div class="col">
+              <img
+                src="path/to/baby-stethoscope.jpg"
+                alt="Bebé con estetoscopio"
+                class="img-fluid"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <script>
       src = "Scripts.js";
     </script>
